--- a/table.html
+++ b/table.html
@@ -10,7 +10,7 @@
     <title>Document</title>
 </head>
 
-<body>
+<body class="body-tables">
     <div class="navbar navbar-table">
         <div class="container">
             <div class="img">
