--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <div class="navbar">
             <div class="container">
                 <div class="img">
-                    <img src="./Logo.png" alt="BuxDU" class="img-fluid">
+                    <img src="./Logo.png" style="max-width:90%;" alt="BuxDU" class="img-fluid">
                 </div>
                 <div class="link-table">
                     <a href="./table.html">Jadvalni ko'rish</a>
