--- a/table.html
+++ b/table.html
@@ -15,7 +15,7 @@
         <div class="container">
             <div class="img">
                 <a href="./index.html">
-                    <img src="./Logo.png" alt="BuxDU" class="img-fluid">
+                    <img style="max-width:80%;" src="./Logo.png" alt="BuxDU" class="img-fluid">
                 </a>
             </div>
         </div>
